Fix some table layouts on mobile

--- a/www/_sass/_base.scss
+++ b/www/_sass/_base.scss
@@ -191,6 +191,10 @@ pre {
 /**
  * Clearfix
  */
+div.clear {
+    @extend %clearfix;
+}
+
 %clearfix {
 
     &:after {
